bug fix: alignment

--- a/css/style.css
+++ b/css/style.css
@@ -165,8 +165,9 @@ a img {
          iMac
  ------------------------------------- */
  #wrapper {
-   width: 100%;
+   width: 100vw;
    height: 68vh;
+   right: 0.7em;
    top: 0;
    overflow: hidden;
    position: relative;
